<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:context=".ui.main.SentinelActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sentinel_icon_half_size"
        android:paddingTop="@dimen/sentinel_icon_half_size">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sentinel_icon_half_size">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
                app:liftOnScroll="false"
                app:liftOnScrollTargetViewId="@id/nestedScrollView">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/sentinel_surface"
                    android:paddingEnd="8dp"
                    app:menu="@menu/sentinel_menu"
                    app:navigationContentDescription="@string/sentinel_settings"
                    app:navigationIcon="@drawable/sentinel_ic_settings"
                    app:subtitleCentered="true"
                    app:title="@string/sentinel_name"
                    app:titleCentered="true"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="460dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigation"
                style="@style/Sentinel.Widget.BottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:menu="@menu/sentinel_bottom_navigation" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/sentinel_ic_tools"
                android:stateListAnimator="@null"
                app:backgroundTint="@color/sentinel_primary"
                app:elevation="9dp"
                app:layout_anchor="@id/bottomNavigation"
                app:layout_anchorGravity="top|center_horizontal"
                app:tint="?android:textColorSecondaryInverse" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/applicationIconView"
        android:layout_width="@dimen/sentinel_icon_size"
        android:layout_height="@dimen/sentinel_icon_size"
        android:layout_gravity="center_horizontal|top"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        tools:ignore="ContentDescription,UnusedAttribute"
        tools:src="@tools:sample/avatars" />

</FrameLayout>