<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/device"
        android:icon="@drawable/sentinel_ic_device"
        android:title="@string/sentinel_device"
        app:showAsAction="always" />

    <item
        android:id="@+id/application"
        android:icon="@drawable/sentinel_ic_application"
        android:title="@string/sentinel_application"
        app:showAsAction="always" />

    <item
        android:id="@+id/blank"
        app:showAsAction="always"
        android:enabled="false"
        android:title="@string/sentinel_tools" />

    <item
        android:id="@+id/permissions"
        android:icon="@drawable/sentinel_ic_permissions"
        android:title="@string/sentinel_permissions"
        app:showAsAction="always" />

    <item
        android:id="@+id/preferences"
        android:icon="@drawable/sentinel_ic_preferences"
        android:title="@string/sentinel_preferences"
        app:showAsAction="always" />

</menu>