...
                android:paddingBottom="8dp"
                android:text="@string/sentinel_triggers"
                android:textAllCaps="true"
                android:textColor="@color/sentinel_primary" />

            <LinearLayout
                android:id="@+id/triggersLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

...
                android:paddingBottom="8dp"
                android:text="@string/sentinel_share_format"
                android:textAllCaps="true"
                android:textColor="@color/sentinel_primary" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/formatGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:minHeight="@dimen/sentinel_item_height"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
...
                android:paddingBottom="8dp"
                android:text="@string/sentinel_bundle_monitor"
                android:textAllCaps="true"
                android:textColor="@color/sentinel_primary" />

            <LinearLayout
                android:id="@+id/bundleMonitorLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

...
