<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/share"
        android:icon="@drawable/sentinel_ic_share"
        android:title="@string/sentinel_share"
        app:showAsAction="always" />

</menu>